rmed email address

--- a/Intro_to_python.ipynb
+++ b/Intro_to_python.ipynb
@@ -10,8 +10,7 @@
    "source": [
     "# Introduction to Python\n",
     "### ...and BioPython!\n",
-    "##### Auguste Dutcher, Raghavan Lab\n",
-    "##### hdutcher@pdx.edu"
+    "##### Auguste Dutcher, Raghavan Lab"
    ]
   },
   {
